# japanese-llama-experiment

./: .gitattributes  .gitmodules  CLAUDE.md  LICENSE  README-ja.md  README.md  cc100-ja-clean.py  download_lm.sh  merge_tokenizers.py  normalize_test.txt  requirements-download.txt  requirements-ja-nlp.txt  requirements.txt  run_tokenizer.py  split-cc100.sh  train_jp_tokenizer.py
00_download_dataset/: download_cc100_ja.sh  download_mc4.txt  download_oscar2301.py  download_oscar2301.txt  download_wiki40bja.py
01_prepare_dataset/: README.md  cc100_ja.py  wiki40b-ja.py  wiki40b.py
02_normalize/: 01_normalize_cc100-ja.py  01_normalize_mc4.py  01_normalize_oscar2301.py  01_normalize_wiki.py  run-all.sh  run_01_normalizer_mc4.sh  run_normalizer.py  text_normalizer.py
03_clean_step1/: 01_clean_cc100ja.py  01_clean_mc4.py  01_clean_oscar2301.py  01_normalize_cc100-ja.py  02_clean_cc100ja.py  02_clean_mc4.py  02_clean_oscar2301.py  ascii_filtering.py  clean_cc100ja_task.py  clean_text.py  jp_sentence.py  jp_sentence_check.py  run-all.sh  setup-bunaki.sh  url_filtering.py
03_clean_step2/: 01_clean_cc100ja.py  01_clean_mc4.py  01_clean_oscar2301.py  README.md  clean_mc4_task.py  clean_oscar2301_task.py  clean_oscar_task.py
03_clean_step3_linewise/: README.md  linewise_filtering.py  load_test_dataset.py
03_clean_step4_kanji/: README.md
04_lm_scoring/: 01_scoring_cc100ja.py  01_scoring_mc4.py  01_scoring_oscar.py  Makefile  README.md  scoring_task.py  text_normalizer.py
05_dedup/: Makefile  README.md  deduplication.py  requirements.txt  text_normalizer.py
05_minhash/: 01-run-cc100ja.sh  01-run-mc4.sh  01-run-oscar.sh  README.md  run-all.sh
06_dedup/: 01-run-dedup.sh  README.md
07_beauty/: 01_beauty.py  README.md  create_dataset.py  hf_dataset_split.py
10_incremental_pretrain/: README.md  ds_zero1_no_offload.json  dump-bin.py  incr_pretrain_tinyllama.py  load_jsonl_dataset.py  prepare_dataset.py  publish_checkpoint.py  requirements.txt  run_jp_pt.sh  run_jp_tinyllama_train.sh
10_incremental_pretrain/attic/: download-phi15.py  prepare_btlm-3b.py  run_clm_pt_with_peft.py  train-jp-llama.py
20_finetune/: README.md  convert-oasst.py  convert-oasst1-ja-chat-for-finetune.py  finetune.py  script.sh  simple_inference.py
20_sft/: README.md
benchmark/: sentence_split.py
build_rwkv_world_ja_tokenizer/: Makefile  README.md  kaomoji-list.txt  proc.py  requirements.txt
center/: README.md
commncrawl/: 01_download_url_files.sh  README.md  cc-index.paths  download_urls.sh  requirements.txt  warc_gz_to_zstd.py
common_util/: load_jsonl_zstd.py
cpp/: CMakeLists.txt  README.md  bootstrap.sh  ccedar_core.h  cedar.h  chromiumbase64.c  common.h  dedup.cc  dedup.hh  exact-dedup.cc  exact-dedup.hh  fpng.cpp  glob.hpp  jagger.BSD  jagger.COPYING  jagger.README  jagger.cc  jagger.h  main.cc  minijson.h  miniz_export.h  nanotokenizer.hh  optparse.h  pbar.LICENSE  pbar.hpp  rwkv_world_tokenizer_cedar.hh  rwkv_world_tokenizer_hat.hh  rwkv_world_tokenizer_trie.hh  safetensors.cc  safetensors.hh  simdjson.cpp  stack_container.h  str-util.hh  tinysegmenter.hpp  zstd.c
cpp-minhash/: .gitignore  CHANGELOG.md  CMakeLists.txt  HASH_ALGORITHMS.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  SIMD_OPTIMIZATIONS.md  meson.build  meson_options.txt
cpp-minhash/cmake/: minhash-config.cmake.in
cpp-minhash/examples/: basic_example.cpp  dedup_example.cpp  edit_similarity_example.cpp  hash_benchmark.cpp  jaccard_simd_example.cpp  sais_example.cpp
cpp-minhash/include/: deduplicator.hpp  edit_similarity.hpp  fnv1a.hpp  hash_function.hpp  jaccard.hpp  minhash.hpp  murmurhash3.hpp  sais.hpp  simd_jaccard.hpp
cpp-minhash/src/: murmurhash3.cpp
cpp/cmake/: Findzstd.cmake
cpp/jdepp/: LICENSE  README  cedar.h  classify.cc  classify.h  jdepp.cc  kernel.cc  kernel.h  linear.cc  linear.h  pa.h  pdep.cc  pdep.h  pecco.h  timer.cc  timer.h  typedef.h
cpp/llamacpp/: ggml.c
cpp/llamacpp/common/: build-info.cpp
data/: tokenizer-wikipedia-ja.json
data/merged_tokenizer_hf/: added_tokens.json  tokenizer.model
dict/: README.md  adult_keywords_en.ng.txt
exact_dedup_at_scale/: CMakeLists.txt  README.md  bootstrap-asan.sh  build-sa-main.cc  exact-dedup-main.cc  main.cc
jaggar/: README.md
jagger/: README.md
kenml/: README.md  build.txt  char_tokenize.py  download_wiki.txt  eval-kenlm-char.py  eval-kenlm-wakachi.py  train_char.sh  wakachi_tokenize.py
llamacpp/: README.md  convert-tinyllama.py  convert-tinyllama.sh  download_tinyllama.py
models/: README.md  rwkv_vocab_v20230424-ja-emo-kao.json  rwkv_vocab_v20230424-ja.json  tinysegmenter-wiki-51200.model
ner/: extract_title_and_category.py  requirements.txt
pretrain_ui/: requirements.txt  ui_app.py
progressive_minhashing/: CMakeLists.txt  README.md  bootstrap.sh  fuzzy-dedup.cc  fuzzy-dedup.hh  main.cc
rnnlm/: README.md  build.sh
sandbox/: autoeval-with-xwin70b.py  bunkai-test.py  concurrent-test.py  download-mml.py  dump_sp_model.py  eval_checkpoint.py  fugashi-proc.py  ginza-proc.py  hf_dataset.py  input-repetition-test.txt  is_latin.py  ja-sentence-segmenter.py  ken_ppl.py  minhash-calc.py  normalizer-test.py  oasst1-chat.py  oasst1-guannaco.py  openllama-tokenizer.py  peft-tut.py  plamo.py  ppl-calc.py  qwen14b.py  repetition-removal.py  rinna-tokenizer.py  sengiritest.py  sentence-break.py  task-runner.py  vaporetto-morph.py  vibrato-morph.py  wtpslittest.py  zh_char_detect.py
sandbox/normalize_cpp/: CMakeLists.txt
sandbox/parquet/: Makefile  create_test_parquet.py  minparquet.h  parquet2jsonl.cpp  test_parquet_reader.cpp
sandbox/tinysegmenter/: README.md  train.sh
sandbox/translation_with_qwen/: requirements.txt  run.py
sandbox/triton/: softmax.py
test_data/: bora.jsonl.zst  dora.jsonl.zst
text-dedup/: Makefile  README.japanese-llama.md  proc-cc100ja.py  run_fuzzy_dedup.sh
text-dedup/text_dedup/: cc100ja.py  minhash.py
text-dedup/text_dedup/utils/: __init__.py  add_args.py  analysis.py  data_load.py  (+1 more)
train_tokenizer/: README.md  merge_tokenizers.py  train_jp_tokenizer.py  train_unigram_tokenizer.py
